--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@
 }
 
 :root {
-  --background: var(--background-tertiary);
+  --bg: var(--background-tertiary);
   --sec: var(--background-primary);
   --pill: var(--text);
 }
@@ -52,7 +52,7 @@
 .guild-container {
   display: flex;
   flex-direction: column;
-  background-color: var(--background);
+  background-color: var(--bg);
   padding-top: 0.5rem;
 }
 
